<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgroundauth"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="ru.pomoysam.itstack.RegistActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_logo" />


    <EditText
        android:id="@+id/phoneReg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorTextLine"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/colorTextLine"
        android:textColorHint="@color/textColorHint"
        android:textCursorDrawable="@color/colorTextLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


    <Button
        android:id="@+id/registrBtn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonredxxhdpi"
        android:text="@string/reg"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneReg" />


    <TextView
        android:id="@+id/notacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/yesacc"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/washsam"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/enterReg"
        android:layout_width="50dp"
        android:layout_height="22dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:text="@string/come"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/notacc" />

    <TextView
        android:id="@+id/license"
        android:layout_width="303dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/licenseAgreement"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrBtn" />

    <Button
        android:id="@+id/licenseBtn"
        android:layout_width="332dp"
        android:layout_height="23dp"
        android:background="@android:color/transparent"
        android:text="@string/licenseAgreementTextBtn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/license"

        />

    <ProgressBar
        android:id="@+id/progressBarRegVerification"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/registrBtn"
        app:layout_constraintEnd_toStartOf="@+id/registrBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/registrBtn"
        app:layout_constraintTop_toBottomOf="@+id/phoneReg" />


</android.support.constraint.ConstraintLayout>