<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgroundauth"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="ru.pomoysam.itstack.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_logo" />


    <Button
        android:id="@+id/enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonredxxhdpi"
        android:text="@string/come"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passReg" />

    <EditText
        android:id="@+id/phoneReg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/colorTextLine"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/colorTextLine"
        android:textColorHint="@color/textColorHint"
        android:textCursorDrawable="@color/colorTextLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
       />

    <EditText
        android:id="@+id/passReg"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorTextLine"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/colorTextLine"
        android:textColorHint="@color/textColorHint"
        android:textCursorDrawable="@color/colorTextLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneReg"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/notacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/notacc"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/washsam"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/registrBtn"
        android:layout_width="102dp"
        android:layout_height="22dp"
        android:layout_marginBottom="14dp"
        android:background="@android:color/transparent"
        android:text="@string/registr"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/notacc" />

    <Button
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/forgotpass"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBtn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/enterBtn"
        app:layout_constraintEnd_toStartOf="@+id/enterBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/enterBtn"
        app:layout_constraintTop_toBottomOf="@+id/phoneReg"
        android:progressTint="@color/progressBar"/>



</android.support.constraint.ConstraintLayout>