<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacgroundauth"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="ru.pomoysam.itstack.RecoverySMS">


    <ImageView
        android:id="@+id/logoRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white_logo" />


    <TextView
        android:id="@+id/recoverTv2"
        android:layout_width="335dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/enterSMS"
        android:textColor="@android:color/white"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recover2" />


    <TextView
        android:id="@+id/recover2"
        android:layout_width="303dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/recoveryPass"
        android:textColor="@android:color/white"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRecovery" />


    <TextView
        android:id="@+id/wash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/washsam"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/smsRecovery"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorTextLine"
        android:hint="@string/code"
        android:inputType="phone"
        android:textColor="@color/colorTextLine"
        android:textColorHint="@color/textColorHint"
        android:textCursorDrawable="@color/colorTextLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recoverTv2" />


    <Button
        android:id="@+id/smsBtn"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonredxxhdpi"
        android:text="@string/recoverTextBtn"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsRecovery" />

    <ProgressBar
        android:id="@+id/smsProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/smsRecovery"
        app:layout_constraintEnd_toStartOf="@+id/smsRecovery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/smsRecovery"
        app:layout_constraintTop_toBottomOf="@+id/recoverTv2" />

</android.support.constraint.ConstraintLayout>